ui fix for dark mode

--- a/style.css
+++ b/style.css
@@ -15127,4 +15127,5 @@ a > .bp4-dark .bp4-tooltip2 .bp4-running-text code{
 #canvas-editor-container {
   width: 95vw;
   height: 100vh;
+  color: #1c2127;
 }
